--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "emoji-picker-react": "^4.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-geolocated": "^4.2.0",
     "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.24.0",
     "socket.io-client": "^4.7.5"
