Connects to peers within a range of distance, removed KDtree

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "random-chat-app",
   "version": "1.0.0",
   "description": "chat with random strangers",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "predev": "cd frontend && npm run build",
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "kd-tree-javascript": "^1.0.3",
+    "geolib": "^3.3.4",
     "node-cron": "^3.0.3",
     "socket.io": "^4.7.5"
   },
