--- a/package.json
+++ b/package.json
@@ -2,29 +2,35 @@
   "name": "random-chat-app",
   "version": "1.0.0",
   "description": "chat with random strangers",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "predev": "cd frontend && npm run build",
-    "dev": "nodemon index.js",
+    "dev": "tsx watch --ignore \"./frontend/**/*\" ./index.ts",
     "frontend": "cd frontend && npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "cd frontend && npm run build",
+    "build": "tsc",
+    "postbuild": "cpy ./frontend/build ./dist",
+    "start": "node ./dist/index.js"
   },
   "author": "Yashvardhan Singh (yvs2701)",
   "license": "ISC",
-  "nodemonConfig": {
-    "ignore": [
-      "frontend/*"
-    ]
-  },
   "dependencies": {
     "express": "^4.19.2",
     "geolib": "^3.3.4",
     "node-cron": "^3.0.3",
-    "socket.io": "^4.7.5"
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.7.5",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.2.0",
+    "@types/node-cron": "^3.0.11",
+    "cpy-cli": "^5.0.0",
     "dotenv": "^16.4.5",
-    "nodemon": "^3.1.4"
+    "tsx": "^4.17.0",
+    "typescript": "^5.5.4"
   }
 }
